// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule text-content should contain documentation accessible 1`] = `
{
  "description": "The \`<my-element>\` element must have accessible text.",
  "url": "https://html-validate.org/rules/text-content.html",
}
`;

exports[`rule text-content should contain documentation default 1`] = `
{
  "description": "The textual content for this element is not valid.",
  "url": "https://html-validate.org/rules/text-content.html",
}
`;

exports[`rule text-content should contain documentation none 1`] = `
{
  "description": "The \`<my-element>\` element must not have textual content.",
  "url": "https://html-validate.org/rules/text-content.html",
}
`;

exports[`rule text-content should contain documentation required 1`] = `
{
  "description": "The \`<my-element>\` element must have textual content.",
  "url": "https://html-validate.org/rules/text-content.html",
}
`;
